# rsm

./: .gitignore  README.md
game/: README.md
generation-service/: README.md  pyproject.toml
generation-service/scripts/: bake_off_ace.py  bake_off_diffrhythm.py  lab_v0.py  smoke_split_call.py
generation-service/scripts/bake_off_prompts/: r1_pop_baseline.json  r2a_calvin_harris.json  r2a_einaudi.json  r2a_luke_combs.json  r2a_nirvana.json  r2a_tool.json  r2a_usher.json  r2a_wu_tang.json  r2b_calvin_harris.json  r2b_einaudi.json  r2b_luke_combs.json  r2b_nirvana.json  r2b_tool.json  r2b_usher.json  r2b_wu_tang.json  setup_r2_prompts.py  setup_rock_only_prompts.py
generation-service/src/rsm_gen/: __init__.py  prototype.py
tts-prototype/: .gitignore  README.md  rubric.md
tts-prototype/context/: 1920s-radio-newsreel.md  1970s-fm-rock-dj.md  1997-altrock-seattle.md  1997-country-nashville.md  1997-rap-nyc.md  2010s-indie-podcast.md  2025-kpop-mc.md
tts-prototype/harness/: generate_patter.py  generate_tts.py  install.ps1  prompt_template.py  pull_models.ps1
tts-prototype/results/: _template.md
tts-prototype/scenarios/: between_songs.txt  caller_interaction.txt  cold_open.txt  genre_moment.txt  local_color.txt  news_break.txt
tts-prototype/voices/: README.md
