[project]
name = "rsm-gen"
version = "0.1.0"
description = "Local music generation service for Rockband Simulator/Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ace-step @ git+https://github.com/ace-step/ACE-Step-1.5.git",
    "gradio>=4.44",
    "pytorch-wavelets>=1.3.0",
    "pywavelets>=1.9.0",
    "setuptools>=81.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rsm_gen"]
